force-app/main/default/objects/pro_Non_Deal_Approver_Mapping__mdt/pro_Non_Deal_Approver_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Used to allow for easy addition, deletion or updating of users who are assigned to Non Deal Approval</description>
    <label>Non Deal Approver Mapping</label>
    <pluralLabel>Non Deal Approver Mappings</pluralLabel>
</CustomObject>