force-app/main/default/objects/pro_Non_Deal_Approver_Mapping__mdt/fields/pro_Approval_Type_Picklist__c.field-meta.xml
<CustomField>
    <fullName>pro_Approval_Type_Picklist__c</fullName>
    <description>Correspond to picklist options from Approval Type field on the Deal object</description>
    <label>Approval Type Picklist</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bond Repurchase</fullName>
                <default>true</default>
                <label>Bond Repurchase</label>
            </value>
            <value>
                <fullName>Cash to LoC Conversion</fullName>
            </value>
            <value>
                <fullName>Change in Technical Budgets</fullName>
            </value>
            <value>
                <fullName>Change of Ownership</fullName>
            </value>
            <value>
                <fullName>Claims - Deviation from Lease Terms</fullName>
            </value>
            <value>
                <fullName>Credit Actions</fullName>
            </value>
            <value>
                <fullName>Deferral Request</fullName>
            </value>
            <value>
                <fullName>LoC Drawdown</fullName>
            </value>
            <value>
                <fullName>LPI Waiver / Discount</fullName>
            </value>
            <value>
                <fullName>Novation Fees (External)</fullName>
            </value>
            <value>
                <fullName>Novation Fees (Internal)</fullName>
            </value>
            <value>
                <fullName>Operational Requests</fullName>
            </value>
            <value>
                <fullName>Other Lease Amendments</fullName>
            </value>
            <value>
                <fullName>Part Exchanges (LG / APU)</fullName>
            </value>
            <value>
                <fullName>Redelivery Buy-outs</fullName>
            </value>
            <value>
                <fullName>Subleasing Request</fullName>
            </value>
            <value>
                <fullName>Tripartite Agreement</fullName>
            </value>
            <value>
                <fullName>Waiver / Rebate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>