force-app/main/default/objects/pro_Non_Deal_Approver_Mapping__mdt/fields/pro_Role__c.field-meta.xml
<CustomField>
    <fullName>pro_Role__c</fullName>
    <description>Approvers role in the approval process</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non Deal Approver</fullName>
                <default>true</default>
                <label>Non Deal Approver</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>