force-app/main/default/objects/pro_Non_Deal_Approver_Mapping__mdt/fields/pro_Ticket_Type__c.field-meta.xml
<CustomField>
    <fullName>pro_Ticket_Type__c</fullName>
    <description>The type of Ticket to be created when Non Deal Approval reaches &apos;Approved&apos; status.</description>
    <label>Ticket Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audit Related</fullName>
                <default>true</default>
                <label>Audit Related</label>
            </value>
            <value>
                <fullName>Commercial Trace</fullName>
            </value>
            <value>
                <fullName>Default / Demand Notice</fullName>
            </value>
            <value>
                <fullName>Lease Side Letter</fullName>
            </value>
            <value>
                <fullName>Letter of Consent</fullName>
            </value>
            <value>
                <fullName>Litigation</fullName>
            </value>
            <value>
                <fullName>Maintenance / Storage /CAMO Agmt</fullName>
            </value>
            <value>
                <fullName>NDA</fullName>
            </value>
            <value>
                <fullName>Non-Deal Approval</fullName>
            </value>
            <value>
                <fullName>Refinancing</fullName>
            </value>
            <value>
                <fullName>Registration related</fullName>
            </value>
            <value>
                <fullName>Reverse KYC</fullName>
            </value>
            <value>
                <fullName>RORA</fullName>
            </value>
            <value>
                <fullName>Tech Consultant Agmt</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>