force-app/main/default/objects/pro_Non_Deal_Approver_Mapping__mdt/listViews/Non_Deal_Approvers.listView-meta.xml
<ListView>
    <fullName>Non_Deal_Approvers</fullName>
    <columns>MasterLabel</columns>
    <columns>pro_Approval_Type_Picklist__c</columns>
    <columns>pro_Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pro_Mapping_Type__c</field>
        <operation>equals</operation>
        <value>Deal Team</value>
    </filters>
    <label>Non-Deal Approvers</label>
</ListView>