force-app/main/default/objects/pro_Non_Deal_Approver_Mapping__mdt/listViews/Tickets.listView-meta.xml
<ListView>
    <fullName>Tickets</fullName>
    <columns>pro_Approval_Type_Picklist__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>pro_Ticket_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pro_Mapping_Type__c</field>
        <operation>equals</operation>
        <value>Ticket</value>
    </filters>
    <label>Tickets</label>
</ListView>